--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "dependencies": {
     "aether-css-framework": "^1.6.17",
+    "bootstrap": "^5.1.3",
     "firebase": "^7.15.5",
     "next": "^11.0.0",
     "next-offline": "^5.0.2",
     "react": "17.0.1",
+    "react-bootstrap": "^2.3.0",
     "react-dom": "17.0.1",
     "react-toastify": "^6.0.8"
   },
