Next.js Firebase PWA

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "Next.js PWA Firebase",
+  "name": "Next.js Firebase PWA",
   "description": "Next.js serverless PWA with Firebase and React Hooks",
   "icons": [
     {
